update display function to alternate show_images; add output to docker compose

--- a/docker-compose.gpu.yml
+++ b/docker-compose.gpu.yml
@@ -10,6 +10,7 @@ services:
       - ./data/:/app/data
       - ./notebooks/:/app/notebooks
       - ./scripts/:/app/scripts
+      - ./output/:/app/output
     deploy:
       resources:
         reservations:
