add models to docker compose

--- a/docker-compose.gpu.yml
+++ b/docker-compose.gpu.yml
@@ -11,6 +11,7 @@ services:
       - ./notebooks/:/app/notebooks
       - ./scripts/:/app/scripts
       - ./output/:/app/output
+      - ./models/:/app/models
     deploy:
       resources:
         reservations:
