--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - ./data/:/app/data
       - ./notebooks/:/app/notebooks
       - ./scripts/:/app/scripts
+      - ./output/:/app/output
+      - ./models/:/app/models
     ports:
         - "$JUPYTER_PORT:$JUPYTER_PORT"
         - "$TENSORBOARD_PORT:$TENSORBOARD_PORT"
